Refactors config classes and provides builders
- Renames LauncherConfig to Config
- Provides GameConfig for game related configurations
- Provides Builders to create immutable config objects
- Renames load and save service classes
- Provides default config via ConfigManager
- TODO: Fix ConfigValidator